--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="assets/img/logo/favicon.png">
     <title>Aldi Tegar | Portfolio</title>
 </head>
 
@@ -30,19 +31,19 @@
             <div class="collapse navbar-collapse mt-2" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home1">Home</a>
+                        <a class="nav-link page-scroll" href="#home1">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about-me">About Me</a>
+                        <a class="nav-link page-scroll" href="#about-me">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
+                        <a class="nav-link page-scroll" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#project">Project</a>
+                        <a class="nav-link page-scroll" href="#project">Project</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -62,9 +63,9 @@
                     <p>Perkenalkan nama saya Aldi Tegar Prakoso, <br> saya seorang Web Developer.</p>
                     <p>Salam Kenal &#128522;</p>
                     <p>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://t.me/alditegarprakoso" target="blank"><i class="fab fa-telegram"></i></a>
+                        <a href="https://www.facebook.com/atp99" target="blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://github.com/alditegarprakoso" target="blank"><i class="fab fa-github"></i></a>
                     </p>
                 </div>
             </div>
@@ -257,10 +258,10 @@
                     <p>alditegarprakoso@gmail.com</p>
                 </div>
                 <div class="col-md-3">
-                    <a href=""><i class="fab fa-whatsapp"></i></a>
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-telegram"></i>
-                    <i class="fab fa-instagram"></i>
+                    <a href="https://wa.me/6283811871153" target="blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://t.me/alditegarprakoso" target="blank"><i class="fab fa-telegram"></i></a>
+                    <a href="https://www.facebook.com/atp99" target="blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://instagram.com/alditegarprakoso" target="blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -277,8 +278,7 @@
     </footer>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
@@ -292,6 +292,7 @@
         AOS.init();
     </script>
 
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
