fixing dan menambah link demo

--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" id="home1">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" type="image/png" href="assets/img/logo/favicon.png">
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="shortcut icon" type="image/png" href="assets/img/logo/favicon.png" />
     <title>Aldi Tegar | Portfolio</title>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navigasi">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navigasi" data-aos="fade-down" data-aos-duration="1000">
         <div class="container">
             <a class="navbar-brand aldi" href="#">aldi.</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -53,48 +52,50 @@
     <section id="home">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-5 text-center" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-md-5 text-center" data-aos="fade-down" data-aos-duration="1000">
                     <a href="assets/img/photo/aldi2.jpg" target="blank">
-                        <img src="assets/img/photo/aldi.jpg" class="photo" alt="Aldi Tegar Prakoso">
+                        <img src="assets/img/photo/aldi.jpg" class="photo" alt="Aldi Tegar Prakoso" />
                     </a>
                 </div>
-                <div class="col-md-5 text-center hallo" data-aos="fade-left" data-aos-duration="1000">
-                    <h3 class="animate__animated animate__pulse animate__infinite infinite">Hallo &#128075;</h3>
-                    <p>Perkenalkan nama saya Aldi Tegar Prakoso, <br> saya seorang Web Developer.</p>
-                    <p>Salam Kenal &#128522;</p>
+                <div class="col-md-5 text-center hallo" data-aos="fade-up" data-aos-duration="1000">
+                    <h3 class="animate__animated animate__pulse animate__infinite infinite">
+                        Hallo &#128075;
+                    </h3>
                     <p>
-                        <a href="https://t.me/alditegarprakoso" target="blank"><i class="fab fa-telegram"></i></a>
-                        <a href="https://www.facebook.com/atp99" target="blank"><i class="fab fa-facebook"></i></a>
-                        <a href="https://github.com/alditegarprakoso" target="blank"><i class="fab fa-github"></i></a>
+                        Perkenalkan nama saya Aldi Tegar Prakoso, <br />
+                        saya seorang Web Developer.
                     </p>
+                    <p>Salam Kenal &#128522;</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="about-me">
-        <div class="container" data-aos="fade-right" data-aos-duration="1000">
-            <h3 class="mb-5">About Me</h3>
+        <div class="container" data-aos="fade-up" data-aos-duration="1000">
+            <h3 class="mb-3 text-center">About Me</h3>
+            <div class="garis mx-auto mb-5"></div>
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        Saya seorang web developer yang berpengalaman menggunakan bahasa pemrograman PHP dalam
-                        membuat sebuah website.
+                        Saya seorang web developer yang berpengalaman menggunakan bahasa
+                        pemrograman PHP dalam membuat sebuah website.
                     </p>
                     <p>
-                        Dalam pembuatan website, ada beberapa tools yang saya gunakan seperti Framework CodeIgniter,
-                        MySQL, dan Bootstrap.
+                        Dalam pembuatan website, ada beberapa tools yang sering saya gunakan
+                        seperti
+                        <span class="badge badge-pill badge-light"> CodeIgniter </span> ,
+                        <span class="badge badge-pill badge-light"> MySQL</span> , dan
+                        <span class="badge badge-pill badge-light"> Bootstrap</span>.
                     </p>
                     <p>
-                        Saya juga baru lulus tahun ini dari Universitas Bina Sarana Informatika, dengan program studi
-                        Sistem Informasi pada jenjang Diploma 3
+                        Saya juga baru lulus tahun ini dari Universitas Bina Sarana
+                        Informatika, dengan program studi Sistem Informasi pada jenjang
+                        Diploma 3
                     </p>
-
                 </div>
                 <div class="col-md-6 mt-3 text-center">
-                    <a href="#" class="btn btn-sm btn-primary">
-                        Download CV
-                    </a>
+                    <a href="#" class="btn btn-sm btn-primary"> Download CV </a>
                 </div>
             </div>
         </div>
@@ -102,40 +103,37 @@
 
     <section id="skills">
         <div class="container">
-            <h3 class="mb-5">Skills</h3>
+            <h3 class="mb-3 text-center" data-aos="fade-up" data-aos-duration="1000">Skills</h3>
+            <div class="garis mx-auto mb-5" data-aos="fade-up" data-aos-duration="1000"></div>
             <div class="row text-center skill">
-                <div class="col-6 col-md-4 mb-5" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-6 col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/logo/php.svg" class="mx-auto mt-3" alt="Bahasa Pemrograman PHP">
+                        <img src="assets/img/logo/php.svg" class="mx-auto mt-3" alt="Bahasa Pemrograman PHP" />
                         <div class="card-body">
-                            <p class="card-text">
-                                PHP
-                            </p>
+                            <p class="card-text">PHP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/logo/codeigniter.svg" class="mx-auto mt-3" alt="Framework CodeIgniter">
+                        <img src="assets/img/logo/codeigniter.svg" class="mx-auto mt-3" alt="Framework CodeIgniter" />
                         <div class="card-body">
-                            <p class="card-text">
-                                CodeIgniter
-                            </p>
+                            <p class="card-text">CodeIgniter</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 mb-5" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-6 col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/logo/laravel.svg" class="mx-auto mt-3" alt="Framework Laravel">
+                        <img src="assets/img/logo/laravel.svg" class="mx-auto mt-3" alt="Framework Laravel" />
                         <div class="card-body">
                             <p class="card-text">Laravel</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-6 col-md-4 mb-5" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-6 col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/logo/mysql.svg" class="mx-auto mt-3" alt="MySQL">
+                        <img src="assets/img/logo/mysql.svg" class="mx-auto mt-3" alt="MySQL" />
                         <div class="card-body">
                             <p class="card-text">MySQL</p>
                         </div>
@@ -143,15 +141,15 @@
                 </div>
                 <div class="col-6 col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/logo/bootstrap.svg" class="mx-auto mt-3" alt="bootstrap">
+                        <img src="assets/img/logo/bootstrap.svg" class="mx-auto mt-3" alt="bootstrap" />
                         <div class="card-body">
                             <p class="card-text">Bootstrap</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-6 col-md-4" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/logo/figma.svg" class="mx-auto mt-3" alt="Figma">
+                        <img src="assets/img/logo/figma.svg" class="mx-auto mt-3" alt="Figma" />
                         <div class="card-body">
                             <p class="card-text">Figma</p>
                         </div>
@@ -163,85 +161,72 @@
 
     <section id="project">
         <div class="container">
-            <h3 class="mb-5">Project</h3>
+            <h3 class="mb-3 text-center" data-aos="fade-up" data-aos-duration="1000">Project</h3>
+            <div class="garis mx-auto mb-5" data-aos="fade-up" data-aos-duration="1000"></div>
             <div class="row text-center skill justify-content-center">
-                <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/project/xylarium.PNG" class="mx-auto mt-3"> <br>
+                        <img src="assets/img/project/xylarium.PNG" class="mx-auto mt-3" />
+                        <br />
                         <div class="card-body">
                             <p class="card-text">
-                                Sistem Informasi Pengolahan Kayu Xylarium Bogoriense <br> <br>
-                                <small>Website yang mengatur data pada Xylarium Bogoriense menggunakan CodeIgniter 3,
-                                    Bootstrap, MySQL</small> <br>
-                                <a href="#" class="btn btn-sm btn-primary mt-3">Demo</a>
+                                Sistem Informasi Pengolahan Kayu Xylarium Bogoriense <br>
+                                <a href="https://tinyurl.com/xylarium-demo" class="btn btn-sm btn-primary mt-3">
+                                    <i class="fas fa-play"></i> Demo
+                                </a>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/project/my-article.png" class="mx-auto mt-3"> <br>
+                        <img src="assets/img/project/my-article.png" class="mx-auto mt-3" />
+                        <br />
                         <div class="card-body">
                             <p class="card-text">
-                                My Article <br> <br>
-                                <small>Sebuah website sederhana untuk memposting sebuah artikel menggunakan CodeIgniter
-                                    3,
-                                    Bootstrap,
-                                    MySQL</small> <br>
-                                <a href="#" class="btn btn-sm btn-primary mt-3">Demo</a>
+                                My Article <br />
+                                <a href="https://youtu.be/jDYRhq2YAJk" class="btn btn-sm btn-primary mt-3">
+                                    <i class="fas fa-play"></i> Demo
+                                </a>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/project/donasi.PNG" class="mx-auto mt-3">
+                        <img src="assets/img/project/donasi.PNG" class="mx-auto mt-3" />
                         <div class="card-body">
                             <p class="card-text">
-                                Donasi Kita <br> <br>
-                                <small>Sebuah website donasi sederhana menggunakan Laravel 7, Bootstrap, MySQL, Payment
-                                    Gateway Midtrans</small> <br>
-                                <a href="#" class="btn btn-sm btn-primary mt-3">Demo</a>
+                                Donasi Kita <br />
+                                <a href="https://tinyurl.com/donasikita-demo" class="btn btn-sm btn-primary mt-3">
+                                    <i class="fas fa-play"></i> Demo</a>
                             </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/project/pantau.PNG" class="mx-auto mt-3">
+                        <img src="assets/img/project/pantau.PNG" class="mx-auto mt-3" />
                         <div class="card-body">
                             <p class="card-text">
-                                Pantau Corona <br> <br>
-                                <small>Sebuah wesite yang menampilkan jumlah data covid menggunakan CodeIgniter 3,
-                                    Bootstrap, API Corona</small> <br>
-                                <a href="#" class="btn btn-sm btn-primary mt-3">Github</a>
+                                Pantau Corona <br />
+                                <a href="https://github.com/alditegarprakoso/pantau-corona"
+                                    class="btn btn-sm btn-primary mt-3"> <i class="fab fa-github"></i> Github</a>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
-                        <img src="assets/img/project/movie list.PNG" class="mx-auto mt-3">
+                        <img src="assets/img/project/movie list.PNG" class="mx-auto mt-3" />
                         <div class="card-body">
                             <p class="card-text">
-                                Movie List <br> <br>
-                                <small>Sebuah website pencarian film menggunakan JavaScript, Bootstrap, OMDB API
-                                </small> <br>
-                                <a href="#" class="btn btn-sm btn-primary mt-3">Github</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                    <div class="card">
-                        <img src="assets/img/project/sass.PNG" class="mx-auto mt-3">
-                        <div class="card-body">
-                            <p class="card-text">
-                                Web Design SASS<br> <br>
-                                <small>Web Design menggunakan SASS
-                                </small> <br>
-                                <a href="#" class="btn btn-sm btn-primary mt-3">Demo</a>
+                                Movie List <br />
+                                <a href="https://github.com/alditegarprakoso/movie-list"
+                                    class="btn btn-sm btn-primary mt-3">
+                                    <i class="fab fa-github"></i> Github
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -252,16 +237,18 @@
 
     <section id="contact">
         <div class="container" data-aos="fade-up" data-aos-duration="1000">
-            <h3 class="mb-5">Get in touch &#129305; </h3>
+            <h3 class="mb-3 text-center">Get in touch &#129305;</h3>
+            <div class="garis mx-auto mb-5"></div>
             <div class="row justify-content-between">
-                <div class="col-md-5">
+                <div class="col-md-5 text-center">
                     <p>alditegarprakoso@gmail.com</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 text-center">
                     <a href="https://wa.me/6283811871153" target="blank"><i class="fab fa-whatsapp"></i></a>
                     <a href="https://t.me/alditegarprakoso" target="blank"><i class="fab fa-telegram"></i></a>
                     <a href="https://www.facebook.com/atp99" target="blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://instagram.com/alditegarprakoso" target="blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/alditegarprakoso" target="blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
@@ -277,9 +264,7 @@
         </div>
     </footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
