--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                     </p>
                 </div>
                 <div class="col-md-6 mt-3 text-center">
-                    <a href="#" class="btn btn-sm btn-primary"> Download CV </a>
+                    <a href="https://tinyurl.com/alditegar-cv" target="blank" class="btn btn-sm btn-primary"> Download
+                        CV </a>
                 </div>
             </div>
         </div>
