--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                         <br />
                         <div class="card-body">
                             <p class="card-text">
-                                Sistem Informasi Pengolahan Kayu Xylarium Bogoriense <br>
-                                <a href="https://tinyurl.com/xylarium-demo" class="btn btn-sm btn-primary mt-3">
+                                Sistem Informasi Pengolahan Data Kayu Xylarium Bogoriense <br>
+                                <a href="https://youtu.be/u62tqL2dRaI" class="btn btn-sm btn-primary mt-3">
                                     <i class="fas fa-play"></i> Demo
                                 </a>
                             </p>
@@ -214,6 +214,20 @@
                                 Pantau Corona <br />
                                 <a href="https://github.com/alditegarprakoso/pantau-corona"
                                     class="btn btn-sm btn-primary mt-3"> <i class="fab fa-github"></i> Github</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card">
+                        <img src="assets/img/project/e-vote.PNG" class="mx-auto mt-3" />
+                        <div class="card-body">
+                            <p class="card-text">
+                                E-Vote (Pemilihan Online) <br />
+                                <a href="https://github.com/alditegarprakoso/evoting"
+                                    class="btn btn-sm btn-primary mt-3">
+                                    <i class="fab fa-github"></i> Github
+                                </a>
                             </p>
                         </div>
                     </div>
