menambahkan experience dan mengatur image

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         <a class="nav-link page-scroll" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#experience">Experience</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link page-scroll" href="#project">Project</a>
                     </li>
                     <li class="nav-item">
@@ -51,7 +54,7 @@
 
     <section id="home">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center aaaaa">
                 <div class="col-md-5 text-center" data-aos="fade-down" data-aos-duration="1000">
                     <a href="assets/img/photo/aldi2.jpg" target="blank">
                         <img src="assets/img/photo/aldi.jpg" class="photo" alt="Aldi Tegar Prakoso" />
@@ -70,6 +73,7 @@
             </div>
         </div>
     </section>
+
 
     <section id="about-me">
         <div class="container" data-aos="fade-up" data-aos-duration="1000">
@@ -153,6 +157,38 @@
                         <img src="assets/img/logo/figma.svg" class="mx-auto mt-3" alt="Figma" />
                         <div class="card-body">
                             <p class="card-text">Figma</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="experience">
+        <div class="container" data-aos="fade-up" data-aos-duration="1000">
+            <h3 class="mb-3 text-center">Experience</h3>
+            <div class="garis mx-auto mb-5"></div>
+            <div class="row text-dark">
+                <div class="col-md-6 mb-5">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Web Programmer</h4>
+                            <p class="card-text">Praktik Kerja Lapangan (Agustus - November 2019)</p>
+                            <hr>
+                            <p class="card-text">
+                                Membuat Sistem Informasi Pengolahan Data Kayu Xylarium Bogoriense berbasis website
+                                menggunakan Bahasa Pemrograman PHP (CodeIgniter 3).
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Staff IT</h4>
+                            <p class="card-text">Praktik Kerja Lapangan (Januari - Maret 2016)</p>
+                            <hr>
+                            <p class="card-text">Mengatasi masalah pada hardware dan software.</p>
                         </div>
                     </div>
                 </div>
