update logo, project, dan contact

--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
                                 <a href="https://youtu.be/jDYRhq2YAJk" class="btn btn-sm btn-primary mt-3">
                                     <i class="fas fa-play"></i> Demo
                                 </a>
+                                <a href="https://github.com/alditegarprakoso/myarticle"
+                                    class="btn btn-sm btn-primary mt-3">
+                                    <i class="fab fa-github"></i> Github
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -237,6 +241,10 @@
                                 Donasi Kita <br />
                                 <a href="https://tinyurl.com/donasikita-demo" class="btn btn-sm btn-primary mt-3">
                                     <i class="fas fa-play"></i> Demo</a>
+                                <a href="https://github.com/alditegarprakoso/evoting"
+                                    class="btn btn-sm btn-primary mt-3">
+                                    <i class="fab fa-github"></i> Github
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -260,6 +268,8 @@
                         <div class="card-body">
                             <p class="card-text">
                                 E-Vote (Pemilihan Online) <br />
+                                <a href="https://youtu.be/a1hWeoyvr9k" class="btn btn-sm btn-primary mt-3">
+                                    <i class="fas fa-play"></i> Demo</a>
                                 <a href="https://github.com/alditegarprakoso/evoting"
                                     class="btn btn-sm btn-primary mt-3">
                                     <i class="fab fa-github"></i> Github
@@ -294,11 +304,13 @@
                 <div class="col-md-5 text-center">
                     <p>alditegarprakoso@gmail.com</p>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-md-4 text-center">
                     <a href="https://wa.me/6283811871153" target="blank"><i class="fab fa-whatsapp"></i></a>
                     <a href="https://t.me/alditegarprakoso" target="blank"><i class="fab fa-telegram"></i></a>
                     <a href="https://www.facebook.com/atp99" target="blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://instagram.com/alditegarprakoso" target="blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/channel/UCo1v3Iu2Mr6M8jGrmtDcruQ" target="blank"><i
+                            class="fab fa-youtube"></i></a>
                     <a href="https://github.com/alditegarprakoso" target="blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
